Improved getting user input in createCharacter()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ SET(CMAKE_CXX_STANDARD 11)
 
 ADD_SUBDIRECTORY(googletest)
 
-ADD_EXECUTABLE(game source/main.cpp source/game_controller.cpp)
-ADD_EXECUTABLE(test source/tests.cpp source/game_controller.cpp)
+ADD_EXECUTABLE(game source/main.cpp)
+ADD_EXECUTABLE(test source/tests.cpp)
 
 TARGET_LINK_LIBRARIES(test gtest)
 TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
